updated gc algo